Fix: Background image and the z-index of the banner components

--- a/src/components/style.mobile.css
+++ b/src/components/style.mobile.css
@@ -51,6 +51,7 @@
         top: 0;
         translate: 0 0;
         min-width: none;
+        z-index: 10;
     }
 
     .navbar-slider-main {
