--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -37,13 +37,12 @@
     pointer-events: none;
 }
 
-.homepage-banner > div:first-child {
+.homepage-banner > div:nth-child(2) {
     font-size: 2.4rem;
     font-weight: 600;
     text-align: center;
     width: 60%;
     position: relative;
-    z-index: 1;
 }
 
 .music-icon {
@@ -58,12 +57,11 @@
     border-radius: 6px;
 }
 
-.homepage-banner > div:nth-child(2) {
+.homepage-banner > div:nth-child(3) {
     font-size: var(--text-font);
     text-align: center;
     width: 64%;
     position: relative;
-    z-index: 1;
 }
 
 .homepage-banner > button {
@@ -77,7 +75,6 @@
     border: none;
     border-radius: 160px;
     position: relative;
-    z-index: 1;
 }
 
 .gallery {
