--- a/src/pages/Home/style.mobile.css
+++ b/src/pages/Home/style.mobile.css
@@ -8,7 +8,7 @@
         height: 88vh;
     }
 
-    .homepage-banner > div:first-child {
+    .homepage-banner > div:nth-child(2) {
         width: 80%;
         font-size: 2.2rem;
     }
@@ -21,7 +21,7 @@
         height: 100%;
     }
 
-    .homepage-banner > div:nth-child(2) {
+    .homepage-banner > div:nth-child(3) {
         width: 84%;
         line-height: 1.48rem;
     }
